--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "wireframetocode",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon index.js",
+    "dev": "nodemon index.js",
     "start": "node index.js"
   },
   "keywords": [],
@@ -19,8 +18,18 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
+    "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "request": "^2.88.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vedantjoshi-git/WireframeToCode.git"
+  },
+  "bugs": {
+    "url": "https://github.com/vedantjoshi-git/WireframeToCode/issues"
+  },
+  "homepage": "https://github.com/vedantjoshi-git/WireframeToCode#readme",
+  "description": ""
 }
